metadata-classic/objects/ProductFeedback__c.object
<CustomObject>
    <fields>
        <fullName>OutreachCustomerContactPricingComment__c</fullName>
        <description>Open text area to store comments about concerns the pro had around customer contact pricing.</description>
        <label>Outreach CustomerContact Pricing Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutreachCustomerContactPricing__c</fullName>
        <description>Picklist to describe how well the pro understood customer contact pricing.</description>
        <label>Outreach Customer Contact Pricing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutreachPaymentsAndBilling__c</fullName>
        <description>Picklist to describe how well the pro understood how billing works for the program.</description>
        <label>Outreach Payments and Billing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutreachPaymentsandBillingComment__c</fullName>
        <description>Open text area to store any concerns the pro had about payments and billing for the program.</description>
        <label>Outreach Payments and Billing Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutreachProOutlook__c</fullName>
        <description>Picklist to describe how the pro sounded after the program was explained.</description>
        <label>Outreach Pro Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Excited</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
                <value>
                    <fullName>Confused</fullName>
                </value>
                <value>
                    <fullName>Angry/frustrated</fullName>
                </value>
                <value>
                    <fullName>Skeptical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutreachQuoteOnBehalfComment__c</fullName>
        <description>Open text area to store comments on any concerns the pro had about Thumbtack&apos;s ability to quote on their behalf.</description>
        <label>Outreach Quote On Behalf Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutreachQuoteOnBehalf__c</fullName>
        <description>Picklist to describe how well the pro understood how we will quote on their behalf.</description>
        <label>Outreach Quote On Behalf</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OutreachSetupStepsComment__c</fullName>
        <description>Open text area to store comments on if the pro had concerns about the program setup steps.</description>
        <label>Outreach Setup Steps Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OutreachSetupSteps__c</fullName>
        <description>Picklist to describe how well the pro understood the steps to complete setup for the program.</description>
        <label>Outreach Setup Steps</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostAvailabilityAdjustment__c</fullName>
        <description>Field to indicate if the pro needed to make an adjustment to their instant availability calendar.</description>
        <inlineHelpText>Did the pro need us to make any Instant availability related adjustments for them?</inlineHelpText>
        <label>Post Availability Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostAvailabilityAdjustmentsComment__c</fullName>
        <description>Text field to store the further explanation details for the Adjust Availability survey question.</description>
        <label>Post Availability Adjustments Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostMessagingAdjustmentComment__c</fullName>
        <description>Text field to store the further explanation details for the Adjust Messaging survey question.</description>
        <label>Post Messaging Adjustment Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostMessagingAdjustment__c</fullName>
        <description>Field to indicate if the pro needed to make an adjustment to their instant messaging.</description>
        <inlineHelpText>Did the pro need us to make any Instant messaging related adjustments for them?</inlineHelpText>
        <label>Post Messaging Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostPreferencesAdjustmentComment__c</fullName>
        <description>Text field to store the further explanation details for the Adjust Request Preferences survey question.</description>
        <label>Post Preferences Adjustment Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostPreferencesAdjustment__c</fullName>
        <description>Field to indicate if the pro needed to make an adjustment to their instant request preferences.</description>
        <inlineHelpText>Did the pro need us to make any Instant request preference related adjustments for them?</inlineHelpText>
        <label>Post Preferences Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostPricingAdjustmentComment__c</fullName>
        <description>Text field to store the further explanation details for the Adjust Pricing survey question.</description>
        <label>Post Pricing Adjustment Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostPricingAdjustment__c</fullName>
        <description>Field to indicate if the pro needed to make an adjustment to their instant pricing.</description>
        <inlineHelpText>Did the pro need us to make any Instant pricing related adjustments for them?</inlineHelpText>
        <label>Post Pricing Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostProOutlook__c</fullName>
        <description>Picklist to describe the pro&apos;s attitude about the instant program.</description>
        <inlineHelpText>After being on Thumbtack Instant Match for some time, what is the pro’s outlook on the product?</inlineHelpText>
        <label>Post Pro Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
                <value>
                    <fullName>Angry or frustrated</fullName>
                </value>
                <value>
                    <fullName>Skeptical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PostProSentimentPaymentsComment__c</fullName>
        <description>Open text area to store comments about how the pro felt about their experience with payments and billing.</description>
        <label>Post Pro Sentiment Payments Comment</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostProSentimentPayments__c</fullName>
        <description>Picklist to describe a sentiment feeling for the pro&apos;s experience with payments and billing.</description>
        <inlineHelpText>How has the pro’s experience been with payments and billing so far?</inlineHelpText>
        <label>Post Pro Sentiment Payments</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAssistConcerns__c</fullName>
        <inlineHelpText>Did the pro have concerns about Thumbtack ProAssist?</inlineHelpText>
        <label>Instant Match Concerns</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAssistCons__c</fullName>
        <inlineHelpText>Did the pro have concerns about Thumbtack ProAssist?</inlineHelpText>
        <label>Instant Match Cons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProAssistLikes__c</fullName>
        <inlineHelpText>Did the pro like any particular aspect(s) of Thumbtack ProAssist?</inlineHelpText>
        <label>Instant Match Likes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProAssistPros__c</fullName>
        <inlineHelpText>Did the pro like any particular aspect(s) of Thumbtack ProAssist?</inlineHelpText>
        <label>Instant Match Pros</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductFeedback__c</fullName>
        <description>Product feedback received from customers/pros</description>
        <inlineHelpText>Enter any feedback received from the customer or pro here.</inlineHelpText>
        <label>Product Feedback</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proisinvitelimited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pro is invite limited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceCategory__c</fullName>
        <label>Service Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittingAgent__c</fullName>
        <description>Text area to store the name of the salesforce user who submitted the feedback.</description>
        <label>Submitting Agent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TTServiceCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TT Service Category</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ProductValue__c.ValueType__c</field>
                <operation>equals</operation>
                <value>Category</value>
            </filterItems>
            <filterItems>
                <field>ProductValue__c.rca_delete_time__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>ProductValue__c</referenceTo>
        <relationshipLabel>Feedback (TT Service Category)</relationshipLabel>
        <relationshipName>Feedback1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThumbtackUserID__c</fullName>
        <label>Thumbtack User ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp__c</fullName>
        <defaultValue>false</defaultValue>
        <description>to trigger an update</description>
        <label>temp</label>
        <type>Checkbox</type>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>FeedbackAll</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>Case__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>All Feedback - This Quarter</label>
        <sharedTo>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FeedbackLast30Days</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback</value>
        </filters>
        <label>Feedback - Last 30 Days</label>
        <sharedTo>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FeedbackLast7Days</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion,ProductFeedback__c.ProServicesFeedback,ProductFeedback__c.EngagementFeedback</value>
        </filters>
        <label>Feedback - Last 7 Days</label>
        <sharedTo>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FeedbackToday</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>Case__c</columns>
        <columns>FeedbackSuggestionLevel0__c</columns>
        <columns>FeedbackSuggestionLevel1__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <label>Feedback - Today</label>
        <sharedTo>
            <role>CSManagingUserTSL</role>
            <role>CustomerSuccessOrganization</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leve1Payingforcontacts</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>Paying for contacts</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <label>Level 1 - Paying for contacts</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level0AllInstantMatchFeedback</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>FeedbackSuggestionLevel0__c</columns>
        <columns>FeedbackSuggestionLevel1__c</columns>
        <columns>FeedbackSuggestionDetails__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FeedbackSuggestionLevel0__c</field>
            <operation>equals</operation>
            <value>Instant Match</value>
        </filters>
        <label>Level 0 - All Instant Match Feedback</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1Advertising</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>Advertising</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <label>Level 1 - Advertising</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1AllNeedsLevel2</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>TTServiceCategory__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER,LAST_QUARTER</value>
        </filters>
        <label>Level 1 - All (Needs Level 2)</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1CategoryRequestForm</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionDetails__c</columns>
        <columns>TTServiceCategory__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>&quot;Category / Request Form Feedback (eg. adding a category, changing request form)&quot;</value>
        </filters>
        <label>Level 1 - Category / Request Form</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1CustomerSuggestion</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>Suggestions from Customers</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <label>Level 1 - Suggestions from Customers</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1DataAdvertised</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>Data Shared on Website</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <label>Level 1 - Data Shared on Website</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1EducationHelp</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>Education / Help,Education / Help / Support</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <label>Level 1 - Education/Help/Support</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1FilteringSortingQuotes</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>Filtering / Sorting Quotes (Pros)</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <label>Level 1 - Filtering / Sorting Quotes</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Level1FilteringSortingRequests</fullName>
        <columns>NAME</columns>
        <columns>FeedbackType__c</columns>
        <columns>ProductFeedback__c</columns>
        <columns>FeedbackSuggestionLevel2__c</columns>
        <columns>CreatedDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ProductFeedback__c.CSFeedback,ProductFeedback__c.HelpCenterSuggestion</value>
        </filters>
        <filters>
            <field>FeedbackType__c</field>
            <operation>equals</operation>
            <value>Filtering / Sorting Requests (Pros)</value>
        </filters>
        <filters>
            <field>FeedbackSuggestionLevel2__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH,LAST_MONTH</value>
        </filters>
        <label>Level 1 - Filtering / Sorting Requests</label>
        <sharedTo>
            <role>SharedServicesUserTPH</role>
            <role>SharedServicesUserTSL</role>
            <roleAndSubordinatesInternal>CSManagingUserTPH</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CSManagingUserTSL</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>LabsManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>MIManagingUser</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>ProServicesManaging_User</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
</CustomObject>